# todos-ocaml

./: .gitignore  .ocamlformat  README.md  dune-project  dune-workspace.device  dune-workspace.simulator  todos_ocaml.opam
.github/workflows/: ci.yml
app/: Info.plist  dune  ios_app.ml  mac_app.ml
lib/: dune  todo_core.ml  todo_datascript_sqlite_stubs.c  todo_runtime.ml  todo_sqlite.ml  todo_sqlite_stubs.c  todo_std.ml  todo_store.ml  todo_store.mli  todo_ui.ml  todo_ui.mli  todos_transit.ml
scripts/: check_screenshot_style.py
test/: dune  migration_smoke.sh  test_todo_model.ml  test_todo_store.ml  test_todo_ui.ml
web/: .gitignore  README.md  dune  index.html  package-lock.json  package.json  react_runtime.js  server.py  todos_db_worker.ml  todos_web.ml  vite.config.js
web/src/: styles.css
