opam-version: "2.0"
synopsis: "Cross-platform todo app built with DataScript and Bonsai Native"
description: """
A cross-platform todo app whose shared OCaml state is stored in datascript and rendered with Bonsai Native or Melange React.
"""
maintainer: "Tienson Qin"
authors: ["Tienson Qin"]
license: "MIT"
depends: [
  "ocaml" {>= "5.4.1"}
  "dune" {>= "3.17"}
  "datascript_ocaml"
  "persistent_sorted_set_ocaml"
  "yojson"
  "melange"
  "bonsai_native"
  "bonsai_apple"
]
pin-depends: [
  ["persistent_sorted_set_ocaml.dev" "git+https://github.com/logseq/persistent-sorted-set-ocaml.git#83a3483bc6406337a1c0f60ac1813d8339a94c42"]
  ["datascript_ocaml.dev" "git+https://github.com/logseq/datascript-ocaml.git#f9e0ab7cc41a9b3ebf402b40bc1a6a21caf76929"]
  ["bonsai_native.dev" "git+https://github.com/logseq/bonsai-native.git#2610e1187b0c0697962a8f33bc05d256cde6de57"]
  ["bonsai_apple.dev" "git+https://github.com/logseq/bonsai-native.git#2610e1187b0c0697962a8f33bc05d256cde6de57"]
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
